Intro to population structure section.

--- a/Session_1/2.Introduction_to_msprime.ipynb
+++ b/Session_1/2.Introduction_to_msprime.ipynb
@@ -409,9 +409,7 @@
     }
    ],
    "source": [
-    "ts = msprime.simulate(sample_size = 6, random_seed = 12,\n",
-    "                     length = 1000, recombination_rate = 1e-4,\n",
-    "                     mutation_rate = 7e-4)\n",
+    "ts = msprime.simulate(sample_size = 6, random_seed = 12, length = 1000, recombination_rate = 1e-4, mutation_rate = 7e-4)\n",
     "\n",
     "for tree in ts.trees():\n",
     "    print('Tree on interval', tree.interval)\n",
@@ -437,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +500,7 @@
        "       [0, 0, 1, 0, 0, 0]], dtype=uint8)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,30 +520,81 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.5 Populations and population structure\n",
+    "## 2.6 Populations, population structure and demographic events\n",
     "\n",
-    "### PopulationConfiguration objects"
+    "So far, we've been simulating single populations of a constant size. \n",
+    "\n",
+    "### Population configurations\n",
+    "\n",
+    "Can specify arbitrary number of discrete populations\n",
+    "Specify a sample size, a population-specific effective population size at time 0 (defaults to Ne) and a population-specific exponential growth rate.\n",
+    "\n",
+    "For example, say we wanted to specify samples from two populations:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pop_configs = [\n",
+    "    msprime.PopulationConfiguration(sample_size=3, initial_size = 500, growth_rate = 0.01),\n",
+    "    msprime.PopulationConfiguration(sample_size=3, initial_size = 500, growth_rate = 0.01)]"
+   ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## 2.6 Demographic events"
+    "# ts = msprime.simulate(population_configurations = pop_configs, random_seed = 12, length = 1000, \n",
+    "#                       recombination_rate = 1e-4, mutation_rate = 7e-4)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Migrations"
+    "This will run forever unless we specify some migration between the groups!\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Migrations\n",
+    "\n",
+    "#### Constant migration\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "M = [\n",
+    "[0, 0.05],\n",
+    "[0.02, 0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ts = msprime.simulate(population_configurations = pop_configs, migration_matrix = M, random_seed = 12, length = 1000, \n",
+    "                      recombination_rate = 1e-4, mutation_rate = 7e-4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Mass migration"
    ]
   },
   {
