--- a/Session_2/Fst_short_chuncks/session2_notebook.ipynb
+++ b/Session_2/Fst_short_chuncks/session2_notebook.ipynb
@@ -301,17 +301,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Fst(div_entry):\n",
-    "    A = np.mean((div_entry.diagonal()))\n",
-    "    B = div_entry[1,0]\n",
-    "    return (B-A)/(A+B)\n",
-    "\n",
-    "def calculate_Fst(ts, samplesets, function=Fst):\n",
-    "    winlen = [0,ts.sequence_length]\n",
-    "    BranchStat = tskit.BranchLengthStatCalculator(ts)\n",
-    "    div_matrix = BranchStat.divergence_matrix(samplesets,winlen)\n",
-    "    Fst_result = list(map(function, div_matrix))\n",
-    "    return Fst_result"
+    "# Fst_function\n",
+    "def Fst(ts):\n",
+    "    A = np.mean(ts.diversity([ts.get_samples(0), ts.get_samples(1)],mode='branch'))\n",
+    "    B = ts.divergence([ts.get_samples(0), ts.get_samples(1)],mode='branch')\n",
+    "    return (B-A)/(A+B)"
    ]
   },
   {
@@ -331,7 +325,7 @@
     "p1 = [_ for _ in range(sample_size)]\n",
     "p2 = [_ for _ in range(sample_size, 2*sample_size)]\n",
     "for index, ts in enumerate(replicates):\n",
-    "    fstSims[index] = calculate_Fst(ts,samplesets=[p1,p2])[0]"
+    "    fstSims[index] = Fst(ts,samplesets=[p1,p2])[0]"
    ]
   },
   {
@@ -594,7 +588,7 @@
    "source": [
     "fstSimsAD = np.zeros(num_reps)\n",
     "for index, ts in enumerate(replicatesAD):\n",
-    "    fstSimsAD[index]= calculate_Fst(ts,samplesets=[p1,p2])[0]"
+    "    fstSimsAD[index]= Fst(ts,samplesets=[p1,p2])[0]"
    ]
   },
   {
@@ -918,7 +912,7 @@
     "p1, p2 = pop[:nsamp], pop[nsamp:]\n",
     "\n",
     "for index, ts in enumerate(replicates_RecHet):\n",
-    "    fstSims_RecHet[index] = calculate_Fst(ts,samplesets=[p1,p2])[0]"
+    "    fstSims_RecHet[index] = Fst(ts,samplesets=[p1,p2])[0]"
    ]
   },
   {
