--- a/Session_2/Fst_short_chuncks/session2_solutions.ipynb
+++ b/Session_2/Fst_short_chuncks/session2_solutions.ipynb
@@ -79,8 +79,6 @@
     }
    ],
    "source": [
-    "#KL add colours here \n",
-    "\n",
     "hmel18 = pd.read_csv('chrom18.csv')\n",
     "hmel18.head()\n",
     "genePos=(1058778+1159581)/2\n",
@@ -150,12 +148,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#number of samples (2Xof diploid individuals) per deme:\n",
-    "sample_size = 10\n",
+    "sample_size = 200\n",
     "\n",
     "#Rates for migration, recombination and mutation are unscaled and per generation:\n",
     "seqLength = 32e3 \n",
@@ -359,8 +357,8 @@
    "source": [
     "We can use the __tskit.BranchLengthStatCalculator(ts)__ to calculate any summary statistic that can be defined in terms of branch lengths in the ancestral recombination graph (this ignores the mutational variance in $F_{st}$, which however is very small given the windowsize). A function for computing $F_{st}$ is built in:\n",
     "\n",
-    "Simulating 200 replicates takes about 3 minutes: \n",
-    "#KL Update with tskit version."
+    "Simulating 200 replicates takes about 30seconds minutes: \n",
+    "Calculating Fst for these replicates about 60 seconds"
    ]
   },
   {
@@ -413,7 +411,7 @@
     "p1 = [_ for _ in range(sample_size)]\n",
     "p2 = [_ for _ in range(sample_size, 2*sample_size)]\n",
     "for index, ts in enumerate(replicates):\n",
-    "    fstSims[index] = calculate_Fst(ts,samplesets=[p1,p2])[0]"
+    "    fstSims[index] = Fst(ts,samplesets=[p1,p2])[0]"
    ]
   },
   {
@@ -607,6 +605,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#run timer\n",
+    "%%time\n",
+    "\n",
     "num_reps = 50\n",
     "\n",
     "replicates = msprime.simulate(\n",
@@ -619,10 +620,7 @@
     "\n",
     "fstSims = np.zeros(num_reps)\n",
     "for index, ts in enumerate(replicates):\n",
-    "    fstSims[index] = calculate_Fst(ts,samplesets=[p1,p2])[0]\n",
-    "    \n",
-    "#run timer\n",
-    "%%time"
+    "    fstSims[index] = Fst(ts,samplesets=[p1,p2])[0]"
    ]
   },
   {
@@ -880,7 +878,7 @@
    "source": [
     "fstSimsAD = np.zeros(num_reps)\n",
     "for index, ts in enumerate(replicatesAD):\n",
-    "    fstSimsAD[index]= calculate_Fst(ts,samplesets=[p1,p2])[0]"
+    "    fstSimsAD[index]= Fst(ts,samplesets=[p1,p2])[0]"
    ]
   },
   {
@@ -1239,7 +1237,7 @@
     "p1, p2 = pop[:nsamp], pop[nsamp:]\n",
     "\n",
     "for index, ts in enumerate(replicates_RecHet):\n",
-    "    fstSims_RecHet[index] = calculate_Fst(ts,samplesets=[p1,p2])[0]"
+    "    fstSims_RecHet[index] = Fst(ts,samplesets=[p1,p2])[0]"
    ]
   },
   {
