--- a/Session_2/notebooks/session2.1_demography.ipynb
+++ b/Session_2/notebooks/session2.1_demography.ipynb
@@ -42,6 +42,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(picture from Jiggins et al. 2017 Phil Trans Roy Soc B)\n",
+    "\n",
     "$F_{st}$ scan for chrom 18 using sliding windows (32kb with 20% overlap)"
    ]
   },
