--- a/Session_1/3.Processing_simulation_results.ipynb
+++ b/Session_1/3.Processing_simulation_results.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -71,14 +71,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "((1:1.351,(4:0.503,(2:0.352,3:0.352):0.151):0.848):1.977,(5:1.898,6:1.898):1.430);\n"
+      "((3:0.103,4:0.103):0.818,(6:0.801,(5:0.407,(1:0.063,2:0.063):0.345):0.394):0.120);\n"
      ]
     }
    ],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -115,22 +115,19 @@
       "##fileformat=VCFv4.2\n",
       "##source=tskit 0.99.2\n",
       "##FILTER=<ID=PASS,Description=\"All filters passed\">\n",
-      "##contig=<ID=1,length=13>\n",
+      "##contig=<ID=1,length=10>\n",
       "##FORMAT=<ID=GT,Number=1,Type=String,Description=\"Genotype\">\n",
       "#CHROM\tPOS\tID\tREF\tALT\tQUAL\tFILTER\tINFO\tFORMAT\tmsp_0\tmsp_1\tmsp_2\n",
-      "1\t1\t.\tA\tT\t.\tPASS\t.\tGT\t1|1\t1|1\t0|0\n",
-      "1\t2\t.\tA\tT\t.\tPASS\t.\tGT\t1|1\t1|1\t0|0\n",
-      "1\t3\t.\tA\tT\t.\tPASS\t.\tGT\t1|1\t1|1\t0|0\n",
-      "1\t4\t.\tA\tT\t.\tPASS\t.\tGT\t0|0\t0|0\t1|0\n",
-      "1\t5\t.\tA\tT\t.\tPASS\t.\tGT\t1|1\t1|1\t0|0\n",
-      "1\t6\t.\tA\tT\t.\tPASS\t.\tGT\t0|0\t0|0\t1|0\n",
-      "1\t7\t.\tA\tT\t.\tPASS\t.\tGT\t0|0\t0|0\t0|1\n",
-      "1\t8\t.\tA\tT\t.\tPASS\t.\tGT\t1|1\t1|1\t0|0\n",
-      "1\t9\t.\tA\tT\t.\tPASS\t.\tGT\t0|0\t0|0\t1|0\n",
-      "1\t10\t.\tA\tT\t.\tPASS\t.\tGT\t0|0\t1|0\t0|0\n",
-      "1\t11\t.\tA\tT\t.\tPASS\t.\tGT\t0|1\t1|1\t0|0\n",
-      "1\t12\t.\tA\tT\t.\tPASS\t.\tGT\t0|0\t0|0\t0|1\n",
-      "1\t13\t.\tA\tT\t.\tPASS\t.\tGT\t0|1\t1|1\t0|0\n"
+      "1\t1\t.\tA\tT\t.\tPASS\t.\tGT\t1|1\t0|0\t0|0\n",
+      "1\t2\t.\tA\tT\t.\tPASS\t.\tGT\t0|0\t0|0\t1|0\n",
+      "1\t3\t.\tA\tT\t.\tPASS\t.\tGT\t1|1\t0|0\t1|0\n",
+      "1\t4\t.\tA\tT\t.\tPASS\t.\tGT\t0|0\t1|1\t0|0\n",
+      "1\t5\t.\tA\tT\t.\tPASS\t.\tGT\t0|0\t0|0\t0|1\n",
+      "1\t6\t.\tA\tT\t.\tPASS\t.\tGT\t0|0\t0|0\t0|1\n",
+      "1\t7\t.\tA\tT\t.\tPASS\t.\tGT\t0|0\t1|1\t0|0\n",
+      "1\t8\t.\tA\tT\t.\tPASS\t.\tGT\t1|1\t0|0\t0|0\n",
+      "1\t9\t.\tA\tT\t.\tPASS\t.\tGT\t0|0\t1|1\t0|0\n",
+      "1\t10\t.\tA\tT\t.\tPASS\t.\tGT\t1|1\t0|0\t0|0\n"
      ]
     }
    ],
@@ -159,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +182,7 @@
        "1 1 0 0 0 0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +215,7 @@
        "       0.33333333, 0.53333333, 0.53333333, 0.53333333, 0.53333333])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,23 +239,23 @@
    "source": [
     "## Large scale processing with tskit\n",
     "\n",
-    "We have just seen how to export data from tskit into a variety of different formats and how to interoperate with external libraries. However, most of the time we do **not** want to do this. Tskit provides extremely efficient ways of processing sequence data, as well as less noisy tree-based statistics that are not available when we just export simulated mutations. To be really efficient, we should avoid exporting data **at all costs**. For large scale datasets, this is often simply not an options. To illustrate this, let's run a simple simulation of a 5 population system, a sample size of 20,000 in each population and human-like parameters.\n",
+    "We have just seen how to export data from tskit into a variety of different formats and how to interoperate with external libraries. However, most of the time we do **not** want to do this. Tskit provides extremely efficient ways of processing sequence data, as well as less noisy tree-based statistics that are not available when we just export simulated mutations. To be really efficient, we should avoid exporting data **at all costs**. For large scale datasets, it's often simply not an option. To illustrate this, let's run a simple simulation of a 5 population system, with a sample size of 20,000 in each population and human-like parameters.\n",
     "\n",
     "The demography consists of a each of the five isolated populations merging into the single ancestral population after 5000, 10000, etc generations. This is a toy model and not intended to represent a realistic evolutionary scenario!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "num trees =  183401 num sites =  190379\n",
-      "CPU times: user 12.4 s, sys: 73 ms, total: 12.5 s\n",
-      "Wall time: 12.5 s\n"
+      "num trees =  185710 num sites =  191219\n",
+      "CPU times: user 14 s, sys: 53.1 ms, total: 14 s\n",
+      "Wall time: 14 s\n"
      ]
     }
    ],
@@ -290,14 +287,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File size = 38.37MiB\n"
+      "File size = 42.80MiB\n"
      ]
     }
    ],
@@ -308,6 +305,33 @@
     "# Get the size\n",
     "import os\n",
     "print(\"File size = {:.2f}MiB\".format(os.path.getsize(\"large-ts.trees\") / 2**20))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you *really* want to have the smallest possible file size for your simulations you can use the [tszip](https://tszip.readthedocs.io/en/latest/) library (and command line interface)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File size = 8.65MiB\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tszip\n",
+    "\n",
+    "tszip.compress(ts, \"large-ts.trees.tsz\")\n",
+    "print(\"File size = {:.2f}MiB\".format(os.path.getsize(\"large-ts.trees.tsz\") / 2**20))"
    ]
   },
   {
@@ -709,7 +733,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
