--- a/Session_2/notebooks/session2.2_recombination_rate_heterogeneity.ipynb
+++ b/Session_2/notebooks/session2.2_recombination_rate_heterogeneity.ipynb
@@ -23,11 +23,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Chromosome 18 is a typical chromosome in the sense that regions with lower recombination rates (eg telomeres) are characterized by high $F_{st}$."
+   ]
   },
   {
    "cell_type": "code",
@@ -357,6 +357,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#number of samples (2Xof diploid individuals) per deme:\n",
+    "nsamp = 10\n",
+    "\n",
+    "#Rates for migration, recombination and mutation are unscaled and per generation:\n",
+    "#seqLength and recr are defined as before\n",
+    "seqLength = 32e3   #bp\n",
+    "recr = 1.84675e-8  # per bp\n",
+    "#new parameters\n",
+    "mig = 3.8866e-7    #chance of migration per individual per generation\n",
+    "Ne0 = 2.3241e6     # individuals (ancestral pop)\n",
+    "Ne1 = 9.8922e5     # individuals (derived pop)\n",
+    "splitT = 4.8580e6  #generations\n",
+    "\n",
+    "# migration matrix specifies a matrix of pairwise migration rates (backwards in time).\n",
+    "\n",
+    "#you need to add the migration matrix yourself\n",
+    "migration_matrix = [[0,0],[mig,0]]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -371,6 +396,7 @@
    "source": [
     "demographic_events = [\n",
     "    msprime.MassMigration(time=splitT, source=1, destination=0, proportion=1.0),\n",
+    "    msprime.MigrationRateChange(time=splitT, rate=0)\n",
     "    ]\n",
     "\n",
     "replicates_RecHet = [msprime.simulate(\n",
