--- a/Session_2/notebooks/session2.1_demography.ipynb
+++ b/Session_2/notebooks/session2.1_demography.ipynb
@@ -594,7 +594,7 @@
     "sns.distplot(hmel18['fst'], label='Hmel Fst 32kb, n=10', norm_hist=True)\n",
     "#plt.axvline(x=np.quantile(fstSims,0.99)) #add vertical line showing the 99% cutoff\n",
     "plt.legend()\n",
-    "ax.set_xlim((0, 0.4))"
+    "ax.set_xlim((0, 0.4));"
    ]
   },
   {
@@ -699,7 +699,7 @@
     "#add median for Hmel Fst distribution\n",
     "#plt.axvline(x=np.median(fstSimsAD), linewidth=10, alpha=0.6, color='orange')\n",
     "plt.legend()\n",
-    "ax.set_xlim((0, 0.4))"
+    "ax.set_xlim((0, 0.4));"
    ]
   },
   {
