Final edits to notebook 2 of session 1.
Final edits to notebook 2 of session 1.

--- a/Session_1/2.Introduction_to_msprime.ipynb
+++ b/Session_1/2.Introduction_to_msprime.ipynb
@@ -13,7 +13,18 @@
     "5. [Population structure](#population_structure)\n",
     "6. [Migration](#migration)\n",
     "7. [Changing population sizes or growth rates](#change_pop_size_and_growth)\n",
-    "8. [The demography debugger](#demography_debugger)"
+    "8. [The demography debugger](#demography_debugger)\n",
+    "\n",
+    "\n",
+    "### Other references\n",
+    "\n",
+    "[1] Kelleher, J., Etheridge, A. M., & McVean, G. (2016). Efficient Coalescent Simulation and Genealogical Analysis for Large Sample Sizes. PLOS Computational Biology, 12(5), e1004842. https://doi.org/10.1371/journal.pcbi.1004842\n",
+    "\n",
+    "[2] Hudson, R. R. (2002) Generating samples under a Wright-Fisher neutral model. Bioinformatics 18:337-8.\n",
+    "\n",
+    "[3] Kingman JFC. The coalescent. Stoch Proc Appl. 1982; 13(3):235–248. doi: 10.1016/0304-4149(82) 90011-4\n",
+    "\n",
+    "[4] Coop, G. Population and Quantitative Genetics. (March 2019). Available online at [https://github.com/cooplab/popgen-notes](https://github.com/cooplab/popgen-notes)."
    ]
   },
   {
@@ -35,20 +46,11 @@
     "*The coalescent* [3] is a model of the historical processes that generate genetic variation and genealogies. We are lucky to have many readable guides to coalescent theory today; one that is freely available online is [[4](https://github.com/cooplab/popgen-notes)].\n",
     " \n",
     "The coalescent model makes a few assumptions that are important to keep in mind:\n",
-    " - infinite sites: no site acquires more than one mutation.\n",
+    " - Infinite sites: no site acquires more than one mutation.\n",
     " - Random mating within populations\n",
     " - Small sample sizes relative to population\n",
     " - No selection\n",
-    " \n",
-    "### Other references\n",
-    "\n",
-    "[1] Kelleher, J., Etheridge, A. M., & McVean, G. (2016). Efficient Coalescent Simulation and Genealogical Analysis for Large Sample Sizes. PLOS Computational Biology, 12(5), e1004842. https://doi.org/10.1371/journal.pcbi.1004842\n",
-    "\n",
-    "[2] Hudson, R. R. (2002) Generating samples under a Wright-Fisher neutral model. Bioinformatics 18:337-8.\n",
-    "\n",
-    "[3] Kingman JFC. The coalescent. Stoch Proc Appl. 1982; 13(3):235–248. doi: 10.1016/0304-4149(82) 90011-4\n",
-    "\n",
-    "[4] Coop, G. Population and Quantitative Genetics. (March 2019). Available online at [https://github.com/cooplab/popgen-notes](https://github.com/cooplab/popgen-notes)."
+    " "
    ]
   },
   {
@@ -56,7 +58,12 @@
    "metadata": {},
    "source": [
     "<a id='getting_started'></a>\n",
-    "## 2.2 Getting started"
+    "## 2.2 Getting started\n",
+    "\n",
+    " - [A simple simulation](#getting_started:simple_sim)\n",
+    " - [Sequence length](#getting_started:sequence_length)\n",
+    " - [Effective population sizes and times](#getting_started:Ne)\n",
+    " - [Random seeds](#getting_started:random_seeds)"
    ]
   },
   {
@@ -74,6 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='getting_started:simple_sim'></a>\n",
     "### A simple simulation\n",
     "\n",
     "The minimal input into msprime is a sample size. Let's simulate a small sample of 6 chromosomes to start off with. We'll use this to illustrate some basic features of msprime simulations.\n",
@@ -112,6 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='getting_started:sequence_length'></a>\n",
     "### Sequence length\n",
     "\n",
     "Because we also haven't specified a sequence length, our simulated sequence will have length 1. "
@@ -147,9 +156,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='getting_started:Ne'></a>\n",
     "### Effective population sizes and times in msprime\n",
     "\n",
-    "Recall that each tree sequence has an equivalent representation as a set of tables. Let's have a look at some of these tables now to get a sense of the timescale over which we have just simulated."
+    "Recall that each tree sequence has an equivalent representation as a set of tables. Let's have a look at some of these tables now."
    ]
   },
   {
@@ -196,6 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='getting_started:random_seeds'></a>\n",
     "### Random seeds\n",
     "\n",
     "In general, running the same `msprime` commands multiple times will produce different outputs.\n",
@@ -221,8 +232,12 @@
     "<a id='recombination'></a>\n",
     "## 2.3 Recombination\n",
     "\n",
+    " - [Uniform recombination](#recombination:uniform)\n",
+    " - [Non-uniform recombination](#recombination:nonuniform)\n",
+    "\n",
     "We can simulate entire chromosome-sized sequences with msprime. To do this, we will often want to add in a model of recombination.\n",
     "\n",
+    "<a id='recombination:uniform'></a>\n",
     "### Uniform recombination\n",
     "\n",
     "To simulate with a constant recombination rate, we specify two extra inputs to `simulate`: a sequence `length` (most easily specified as a number of bases) and a `recombination_rate` (specified as the rate of crossovers per unit of length per generation)."
@@ -234,7 +249,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ts = msprime.simulate(sample_size = 6, random_seed = 12, length = 1000, recombination_rate = 1e-4 )\n",
+    "ts = msprime.simulate(sample_size = 6, random_seed = 12, length = 1000, \n",
+    "                      recombination_rate = 1e-4 )\n",
     "\n",
     "for tree in ts.trees():\n",
     "    print('Tree on interval', tree.interval)\n",
@@ -245,6 +261,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='recombination:nonuniform'></a>\n",
     "### Non-uniform recombination\n",
     "\n",
     "It's also possible to simulate under a variable rate of recombination.\n",
@@ -274,6 +291,8 @@
     "<a id='mutation'></a>\n",
     "## 2.4 Mutation\n",
     "\n",
+    " - [Accessing variants](#mutation:variants)\n",
+    "\n",
     "To simulate genetic variation, we'll need to add some mutations to our tree sequences. Mutations are generated in msprime by sprinkling mutations over the branches of trees at a rate specified by the `mutation_rate` input to `simulate`. "
    ]
   },
@@ -283,7 +302,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ts = msprime.simulate(sample_size = 6, random_seed = 12, length = 1000, recombination_rate = 1e-4, mutation_rate = 7e-4)\n",
+    "ts = msprime.simulate(sample_size = 6, random_seed = 12, length = 1000, \n",
+    "                      recombination_rate = 1e-4, mutation_rate = 7e-4)\n",
     "\n",
     "for tree in ts.trees():\n",
     "    print('Tree on interval', tree.interval)\n",
@@ -301,6 +321,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='mutation:variants'></a>\n",
     "### Accessing the simulated variants\n",
     "\n",
     "We may want to directly analyse the sequence data that results from simulations.\n",
@@ -323,9 +344,7 @@
    "metadata": {},
    "source": [
     "Note that `var.alleles[var.genotypes[j]]` gives the allele of sample ID j at variant `var`.\n",
-    "By default, `msprime` labels the wildtype allele `'0'` and the mutated type allele `'1'`.\n",
-    "\n",
-    "(Can these be changed to explicitly show nucleotide bases somehow?)"
+    "By default, `msprime` labels the wildtype allele `'0'` and the mutated type allele `'1'`.\n"
    ]
   },
   {
@@ -360,7 +379,6 @@
     "\n",
     "So far, we've been simulating samples from a single population of a constant size, which isn't particularly exciting!\n",
     "One of the strengths of msprime is that it can be used to specify quite complicated models of demography and population history with a simple Python API. \n",
-    "We'll see how to do this now.\n",
     "\n",
     "### Population configurations\n",
     "\n",
@@ -411,8 +429,13 @@
     "<a id='migration'></a>\n",
     "## 2.6 Migrations\n",
     "\n",
+    " - [Constant migration](#migration:constant)\n",
+    " - [Migration rate changes](#migration:ratechange)\n",
+    " - [Mass migration](#migration:mass)\n",
+    "\n",
     "With msprime, you can specify continual rates of migrations between populations, as well as one-off mass migrations.\n",
     "\n",
+    "<a id='migration:constant'></a>\n",
     "### Constant migration\n",
     "\n",
     "\n",
@@ -440,8 +463,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ts = msprime.simulate(population_configurations = [pop0, pop1], migration_matrix = M, length = 1000, \n",
-    "                     random_seed = 17, recombination_rate = 1e-6)"
+    "ts = msprime.simulate(population_configurations = [pop0, pop1], migration_matrix = M, \n",
+    "                      length = 1000, random_seed = 17, recombination_rate = 1e-6)"
    ]
   },
   {
@@ -486,6 +509,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Exercise: \n",
+    "\n",
+    "<p><img src=\"pics/population-structure-exercise-1.png\" alt=\"\" width=\"50%\"/></p>\n",
+    "\n",
+    "In the code above, we have specified an two-population island model. Can you turn this into a three-population island model? \n",
+    "If you get time, try to plot the tree sequence."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pop_configs_ex = [\n",
+    "    msprime.PopulationConfiguration(sample_size=3, initial_size = 500, growth_rate = 0),\n",
+    "    msprime.PopulationConfiguration(sample_size=3, initial_size = 500, growth_rate = 0)]\n",
+    "\n",
+    "migration_rates_ex = np.array([\n",
+    "[0, 0.05],\n",
+    "[0.02, 0]])\n",
+    "\n",
+    "demographic_events_ex = [\n",
+    "    msprime.MigrationRateChange(time = 100, rate = 0.01, matrix_index=(0, 1))]\n",
+    "\n",
+    "# Simulate!\n",
+    "ts_ex = msprime.simulate(\n",
+    "    population_configurations = pop_configs_ex, \n",
+    "    migration_matrix = migration_rates_ex, \n",
+    "    length = 1000, \n",
+    "    demographic_events = demographic_events_ex, \n",
+    "    recombination_rate = 1e-6\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='migration:ratechange'></a>\n",
     "### Changing the migration rate\n",
     "\n",
     "<p><img src=\"pics/population-structure-2.png\" alt=\"\" width=\"50%\"/></p>\n",
@@ -532,45 +595,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Exercise: \n",
-    "\n",
-    "<p><img src=\"pics/population-structure-exercise-1.png\" alt=\"\" width=\"50%\"/></p>\n",
-    "\n",
-    "In the code below, we have specified an two-population island model. Can you turn this into a three-population island model? \n",
-    "If you get time, try to plot the tree sequence."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pop_configs_ex = [\n",
-    "    msprime.PopulationConfiguration(sample_size=3, initial_size = 500, growth_rate = 0),\n",
-    "    msprime.PopulationConfiguration(sample_size=3, initial_size = 500, growth_rate = 0)]\n",
-    "\n",
-    "migration_rates_ex = np.array([\n",
-    "[0, 0.05],\n",
-    "[0.02, 0]])\n",
-    "\n",
-    "demographic_events_ex = [\n",
-    "    msprime.MigrationRateChange(time = 100, rate = 0.01, matrix_index=(0, 1))]\n",
-    "\n",
-    "# Simulate!\n",
-    "ts_ex = msprime.simulate(\n",
-    "    population_configurations = pop_configs_ex, \n",
-    "    migration_matrix = migration_rates_ex, \n",
-    "    length = 1000, \n",
-    "    demographic_events = demographic_events_ex, \n",
-    "    recombination_rate = 1e-6\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "<a id='migration:mass'></a>\n",
     "### Mass migration\n",
     "\n",
     "`MassMigration` objects are used to specify one-off events in which some fraction of a population moves into another population. \n",
@@ -607,8 +632,8 @@
    "outputs": [],
    "source": [
     "ts = msprime.simulate(population_configurations = [pop0, pop1], migration_matrix = M, \n",
-    "                      demographic_events = [admixture_event],\n",
-    "                      random_seed = 12, length = 1000, recombination_rate = 1e-4, mutation_rate = 7e-4)"
+    "                      demographic_events = [admixture_event], random_seed = 12, \n",
+    "                      length = 1000, recombination_rate = 1e-4, mutation_rate = 7e-4)"
    ]
   },
   {
@@ -616,6 +641,8 @@
    "metadata": {},
    "source": [
     "`MassMigration` objects can also be used to specify divergence events, but we must take some care.\n",
+    "\n",
+    "<p><img src=\"pics/population-structure-5.png\" alt=\"\" width=\"50%\"/></p>\n",
     "\n",
     "The following specifies that 200 generations ago, 100% of population 1 was a migrant from population 0."
    ]
@@ -699,9 +726,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now all ancestral nodes prior to generation 200 are exclusively from population 0. Hooray!\n",
-    "\n",
-    "<p><img src=\"pics/population-structure-5.png\" alt=\"\" width=\"50%\"/></p>"
+    "Now all ancestral nodes prior to generation 200 are exclusively from population 0. Hooray!"
    ]
   },
   {
