small correction notebook

--- a/Session_2/notebooks/session2_solutions.ipynb
+++ b/Session_2/notebooks/session2_solutions.ipynb
@@ -153,7 +153,7 @@
    "outputs": [],
    "source": [
     "#number of samples (2Xof diploid individuals) per deme:\n",
-    "sample_size = 200\n",
+    "sample_size = 10\n",
     "\n",
     "#Rates for migration, recombination and mutation are unscaled and per generation:\n",
     "seqLength = 32e3 \n",
@@ -817,19 +817,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#what about the process are we not capturing in the model?\n",
-    "#In our IM model migration was simplified to a _single_ parameter"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "What aspects of the evolutionary process are we not capturing in the model? In our IM model migration was simplified to a _single_ parameter\n",
+    "\n",
     "How different is the distribution of $F_{st}$ if we assume that divergence happened in allopatry and has been partially eroded by secondary contact? Let's start by assuming the same split time $T_{s}$ and $N_e$ as before, but instead of migration at a constant rate assume a sudden admixture event which transfers a proportion of $f$ from pop0 to pop1 at time $T_{ad}$. Admixture is specified in the same way as a population split: as a MassMigration event; i.e. to set up an admixture event 10,000 years ago (with $f=0.227$): "
    ]
   },
