--- a/Session_2/notebooks/session2.1_demography.ipynb
+++ b/Session_2/notebooks/session2.1_demography.ipynb
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,21 +547,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'TreeSequence' object has no attribute 'Fst'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<timed exec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'TreeSequence' object has no attribute 'Fst'"
+     ]
+    }
+   ],
    "source": [
-    "%%time #timer to show how fast/slow code runs\n",
-    "#add your code here, specifying the simulation replicates as done above \n",
-    "#AND\n",
-    "#set up a numpy array of Fst estimates\n",
+    "%%time \n",
+    "#timer to show how fast/slow code runs\n",
+    "num_reps = 100\n",
     "\n",
+    "replicates = msprime.simulate(\n",
+    "        num_replicates = num_reps,\n",
+    "        length = seqLength, \n",
+    "        recombination_rate = recr,\n",
+    "        population_configurations = population_configurations,\n",
+    "        demographic_events = demographic_events,\n",
+    "        migration_matrix = [[0,0],[mig,0]])\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "#run the code"
+    "fstSims = np.zeros(num_reps)\n",
+    "for index, ts in enumerate(replicates):\n",
+    "    #fstSims[index] = ts.Fst(mode='branch', sample_sets=[ts.samples(0), ts.samples(1)], indexes=[(0,1)])\n",
+    "    fstSims[index] = Fst(ts)"
    ]
   },
   {
